fixed text-align center on windows resize, make users name clickable to their profiles

--- a/public/css/rektsummoner.css
+++ b/public/css/rektsummoner.css
@@ -288,7 +288,7 @@
 
 @media all and (max-width:1380px) {
 
-    .profile-usermenu {
+    .stats {
       text-align: center;
     }
 
